--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@webpack-cli/generators": "^3.0.7",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.8.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
     "style-loader": "^3.3.3",
