--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-env": "^7.22.1",
     "@webpack-cli/generators": "^3.0.7",
     "babel-loader": "^9.1.2",
+    "chess.js": "^1.0.0-beta.6",
     "css-loader": "^6.8.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
