--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@webpack-cli/generators": "^3.0.7",
     "babel-loader": "^9.1.2",
     "chess.js": "^1.0.0-beta.6",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.8.1",
+    "favicons": "^7.1.4",
+    "favicons-webpack-plugin": "^6.0.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
