--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "favicons-webpack-plugin": "^6.0.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
+    "jsonwebtoken": "^9.0.2",
     "mini-css-extract-plugin": "^2.7.6",
     "sqlite3": "^5.1.6",
     "style-loader": "^3.3.3",
