--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chess.js": "^1.0.0-beta.6",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.8.1",
+    "dotenv": "^16.4.5",
     "favicons": "^7.1.4",
     "favicons-webpack-plugin": "^6.0.1",
     "file-loader": "^6.2.0",
